<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:gravity = "center"
        android:layout_width = "1dp"
        android:layout_height = "wrap_content"
        android:layout_weight = "1.5"
        android:text = "@string/list_id"
        android:textColor = "#aaa"
        android:padding = "5dp" />

    <TextView
        android:gravity = "center"
        android:layout_width = "1dp"
        android:layout_height = "wrap_content"
        android:layout_weight = "2"
        android:text = "@string/list_departure"
        android:textColor = "#aaa"
        android:padding = "5dp" />

    <TextView
        android:gravity = "center"
        android:layout_width = "1dp"
        android:layout_height = "wrap_content"
        android:layout_weight = "2"
        android:text = "@string/list_arrival"
        android:textColor = "#aaa"
        android:padding = "5dp" />

    <TextView
        android:gravity = "center"
        android:layout_width = "1dp"
        android:layout_height = "wrap_content"
        android:layout_weight = "1"
        android:text = "@string/list_time"
        android:textColor = "#aaa"
        android:padding = "5dp" />

    <TextView
        android:gravity = "center"
        android:layout_width = "0dp"
        android:layout_height = "wrap_content"
        android:layout_weight = "1"
        android:text = "@string/list_price"
        android:textColor = "#aaa"
        android:padding = "5dp" />
    
</LinearLayout>