<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Otter Airways"
        android:textSize="40sp"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.245" />

    <Button
        android:id="@+id/create_account_button"
        style="@style/AppTheme.RoundedCornerMaterialButton"
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textSize="15sp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="10dp"
        tools:layout_editor_absoluteX="92dp"
        tools:layout_editor_absoluteY="92dp" />

    <Button
        android:id="@+id/reserve_seat_button"
        style="@style/AppTheme.RoundedCornerMaterialButton"
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/reserve_seat"
        android:textSize="15sp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        tools:layout_editor_absoluteX="92dp"
        tools:layout_editor_absoluteY="92dp" />

    <Button
        android:id="@+id/cancel_seat_button"
        style="@style/AppTheme.RoundedCornerMaterialButton"
        android:gravity="center"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/cancel_seat"
        android:textSize="15sp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        tools:layout_editor_absoluteX="92dp"
        tools:layout_editor_absoluteY="92dp" />

    <Button
        android:id="@+id/manage_system_button"
        style="@style/AppTheme.RoundedCornerMaterialButton"
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/manage_system"
        android:textSize="15sp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="1dp"
        tools:layout_editor_absoluteX="92dp"
        tools:layout_editor_absoluteY="92dp" />

</LinearLayout>