<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManageSystemActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Manage System"
        android:textSize="30sp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.245" />

    <Button
        android:id="@+id/transactions_button"
        style="@style/AppTheme.RoundedCornerMaterialButton"
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/transactions"
        android:textSize="15sp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        tools:layout_editor_absoluteX="92dp"
        tools:layout_editor_absoluteY="92dp" />

    <Button
        android:id="@+id/add_flight_button"
        style="@style/AppTheme.RoundedCornerMaterialButton"
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/add_flight"
        android:textSize="15sp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        tools:layout_editor_absoluteX="92dp"
        tools:layout_editor_absoluteY="92dp" />

    <Button
        android:id="@+id/main_menu_button"
        style="@style/AppTheme.RoundedCornerMaterialButton"
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/main_menu"
        android:textSize="15sp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="1dp"
        tools:layout_editor_absoluteX="92dp"
        tools:layout_editor_absoluteY="92dp" />

</LinearLayout>